--- a/gallery/reference/package.json
+++ b/gallery/reference/package.json
@@ -7,7 +7,9 @@
     "start": "ts-node src/index.ts",
     "dev": "ts-node-dev --respawn src/index.ts",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "compile": "tsc",
+    "compile:watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
