Added instructions for installing Roc.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *~
 node_modules
 gallery/reference/build
+gallery/roc/roc_nightly-linux_x86_64-2024-06-14-5d09479
+gallery/roc/roc_nightly-linux_x86_64-latest.tar.gz
